--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "antd": "^4.2.4",
+        "autoprefixer": "^9.8.0",
         "next": "^9.4.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "styled-components": "^5.1.0"
+        "react-icons": "^3.10.0",
+        "tailwindcss": "^1.4.6"
     },
     "devDependencies": {
         "@types/node": "^14.0.5",
-        "@types/styled-components": "^5.1.0",
+        "@types/react": "^16.9.35",
         "typescript": "^3.9.3"
     }
 }
