--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@mdx-js/loader": "^1.6.5",
+        "@mdx-js/mdx": "^1.6.5",
+        "@mdx-js/react": "^1.6.5",
+        "@mdx-js/runtime": "^1.6.5",
+        "@next/mdx": "^9.4.4",
         "autoprefixer": "^9.8.0",
+        "front-matter": "^4.0.2",
         "next": "^9.4.2",
+        "next-mdx-enhanced": "^3.0.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-icons": "^3.10.0",
         "tailwindcss": "^1.4.6"
     },
     "devDependencies": {
+        "@types/mdx-js__react": "^1.5.2",
         "@types/node": "^14.0.5",
         "@types/react": "^16.9.35",
         "typescript": "^3.9.3"
