I think this is a better way to apply text color

--- a/components/Projects/myProjects.json
+++ b/components/Projects/myProjects.json
@@ -10,5 +10,11 @@
         "description": "A web app to play classic Sudoku! Sudoku Dojo is an experiment in custom state management, in which I accidentally recreate Redux.",
         "githubLink": "https://github.com/JaimeGensler/sudoku-dojo",
         "tags": ["TypeScript", "React", "Immer"]
+    },
+    {
+        "title": "Sudoku Dojo",
+        "description": "A web app to play classic Sudoku! Sudoku Dojo is an experiment in custom state management, in which I accidentally recreate Redux.",
+        "githubLink": "https://github.com/JaimeGensler/sudoku-dojo",
+        "tags": ["TypeScript", "React", "Immer"]
     }
 ]
